--- a/TM.RestHour/Views/CrewHealth/UploadPistures.cshtml
+++ b/TM.RestHour/Views/CrewHealth/UploadPistures.cshtml
@@ -4,6 +4,10 @@
     ViewBag.Title = "UploadPistures";
 }
 
+<script src="~/Scripts/jquery-3.2.1.js"></script>
+
+<link href="~/Content/themes/base/jquery-ui.css" rel="stylesheet" />
+<link href="dist/dual-listbox.css" rel="stylesheet">
 
 <body style="background-image: url(../background/crewimport.jpg);
     background-size: cover;">
@@ -69,6 +73,28 @@
     </div>
 </body>
 
+@section Scripts {
+    @*@Scripts.Render("~/bundles/jqueryValidate")
+    @Scripts.Render("~/bundles/jquerySteps")
+    @Scripts.Render("~/bundles/demoWizard")
+    @Scripts.Render("~/bundles/moment")
+    @Scripts.Render("~/bundles/datetimePicker")
+    @Scripts.Render("~/bundles/filestyle")
+    @Scripts.Render("~/bundles/tagsinput")
+    @Scripts.Render("~/bundles/chosen")
+    @Scripts.Render("~/bundles/sliderCtrl")
+    @Scripts.Render("~/bundles/inputmask")
+    @Scripts.Render("~/bundles/wysiwyg")
+    @Scripts.Render("~/bundles/moment")
+    @Scripts.Render("~/bundles/ColorPicker")
+    @Scripts.Render("~/bundles/demoForms")
+    @Scripts.Render("~/bundles/select2")
+    @Scripts.Render("~/bundles/sparklines")*@
+
+    @Scripts.Render("~/bundles/jqueryval")
+    @Scripts.Render("~/bundles/jqueryui")
+    @Styles.Render("~/Content/themes/base/css")
+}
 
 <script type="text/javascript">
     function readURL(input) {
@@ -85,27 +111,20 @@
 
     $(document).ready(function () {
 
+        function getUrlVars() {
+            var vars = [], hash;
+            var hashes = window.location.href.slice(window.location.href.indexOf('?') + 1).split('&');
+            for (var i = 0; i < hashes.length; i++) {
+                hash = hashes[i].split('=');
+                vars.push(hash[0]);
+                vars[hash[0]] = hash[1];
+            }
+            return vars;
+        }
+
+        var me = getUrlVars()["CrewID"];
+        $("#ddlCrew").val(me);
     });
 
 </script>
 
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryValidate")
-    @Scripts.Render("~/bundles/jquerySteps")
-    @Scripts.Render("~/bundles/demoWizard")
-    @Scripts.Render("~/bundles/moment")
-    @Scripts.Render("~/bundles/datetimePicker")
-    @Scripts.Render("~/bundles/filestyle")
-    @Scripts.Render("~/bundles/tagsinput")
-    @Scripts.Render("~/bundles/chosen")
-    @Scripts.Render("~/bundles/sliderCtrl")
-    @Scripts.Render("~/bundles/inputmask")
-    @Scripts.Render("~/bundles/wysiwyg")
-    @Scripts.Render("~/bundles/moment")
-    @Scripts.Render("~/bundles/ColorPicker")
-    @Scripts.Render("~/bundles/demoForms")
-    @Scripts.Render("~/bundles/select2")
-    @Scripts.Render("~/bundles/sparklines")
-
-
-}
